{
  "version": 4,
  "terraform_version": "0.12.14",
  "serial": 209,
  "lineage": "c9a16767-d1d5-7578-4e11-6a252c254678",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836875463007:security-group/sg-00418043faecf857d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00418043faecf857d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20191218213334497000000002",
            "name_prefix": null,
            "owner_id": "836875463007",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "sgmy-emr-1Master",
              "Project": "alan-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-01373d642560468d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836875463007:security-group/sg-0a8636996d0ad2e7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8636996d0ad2e7a",
            "ingress": [],
            "name": "terraform-20191218213334497000000001",
            "name_prefix": null,
            "owner_id": "836875463007",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "sgmy-emr-1Slave",
              "Project": "alan-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-01373d642560468d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_svc_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836875463007:security-group/sg-0e02e07766ceb28ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e02e07766ceb28ca",
            "ingress": [],
            "name": "terraform-20191218213334497000000003",
            "name_prefix": null,
            "owner_id": "836875463007",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "sgmy-emr-1ServiceAccess",
              "Project": "alan-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-01373d642560468d7"
          }
        }
      ]
    }
  ]
}